--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,57 @@
 <html>
-	<!-- This page will be shown when you git the root URL -->
 	<head>
-	    <title>CS480 Demo HomePage</title>
+	    <title>BroncoBoard</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
 	    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	    <script src="/js/home-control.js"></script>
 	</head>
 
-	<body onload="healthCheck();">
-		Demo Project is running: <label id="status"></label>
+	<body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <span class="glyphicon glyphicon-lock"></span> Login</div>
+                        <div class="panel-body">
+                            <form class="form-horizontal" role="form">
+                            <div class="form-group">
+                                <label for="inputEmail3" class="col-sm-3 control-label">
+                                    Email</label>
+                                <div class="col-sm-9">
+                                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword3" class="col-sm-3 control-label">
+                                    Password</label>
+                                <div class="col-sm-9">
+                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-offset-3 col-sm-9">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"/>
+                                            Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group last">
+                                <div class="col-sm-offset-3 col-sm-9">
+                                    <button type="submit" class="btn btn-success btn-sm">Sign in</button>
+                                </div>
+                            </div>
+                            </form>
+                        </div>
+                        <div class="panel-footer">Not Registered? <a href="#">Register here</a></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</body>
-
 </html>
